# btc-monitor

./: .env.example  .gitignore  CLOUD_DEPLOY_GUIDE.md  LOCAL_DEBUG_GUIDE.md  LOCAL_STATUS.md  PROJECT_CLEANUP_REPORT.md  QUICK_START.md  README.md  auto_update_service.py  btc_indicators_history.json  btc_indicators_latest.json  check_api_freshness.py  check_last_records.py  check_structure.py  cleanup_history.py  cleanup_redundant_files.py  diagnose_data_lag.py  diagnose_detailed.py  fetch_btc_indicators_history_files.py  fix_data_proper.py  fix_history_api_dates.py  fix_ma200_data.py  fix_today_data.py  pyproject.toml  requirements.txt  test_api_detailed.py  update_data.py  validate_btc_data_quality.py  vercel.json  verify_0319_source.py  verify_data_mismatch.py
app/: .gitignore  index.html  package-lock.json  package.json  vercel.json  vite.config.ts  vitest.config.ts
backup_removed_files/: CLOUD_DEPLOY_GUIDE.md  DATA_SYNC_FIX_REPORT.md  DATA_UPDATE_SOLUTION.md  DEPLOY_SUMMARY.md  FINAL_DATA_VERIFICATION_REPORT.md  FINAL_STRUCTURE.md  PROJECT_AUDIT_REPORT.md  PROJECT_CLEANUP_ANALYSIS.md  RATE_LIMIT_SOLUTION.md  VERCEL_DEPLOY_CHECKLIST.md  auto_update_service.py  check_api_dates.py  check_data.py  check_data_consistency.py  check_history_api_dates.py  check_history_dates.py  check_indicator_lag.py  check_output.txt  data_flow_analysis.md  fix_data.py  fix_history_api_dates.py  frontend_data_verification.py  local_storage_sync_fix.py  project_structure_analysis.md  update_data.py  validate_and_sync_data.py  verify_data_match.py  verify_latest_data.py
docs/: CLAUDE.md  (+2 more)
(+50 files in other folders)
